@@ -1,4 +1,4 @@
-$Id: History,v 1.7 1999-02-07 17:43:33 johna Exp $
+$Id: History,v 1.8 1999-03-29 16:39:06 johna Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -23,6 +23,9 @@ committal in the CVS repository !
 
 History file for visualization category
 ---------------------------------------
+
+vis-01-00-06  29th March 1999  John Allison
+- Platform dependency fix in G4VisCommandsScene.cc.
 
 vis-01-00-05  7th February 1999  John Allison
 - management: - Added /vis/scene/notifyHandlers.
